updated image url

--- a/qr.css
+++ b/qr.css
@@ -27,6 +27,6 @@
   }
 
   body {
-    background-image: url(../images/favicon-32x32.png);
+    background-image: url(./images/favicon-32x32.png);
     padding: 30px;
   }
